--- a/templates/index.html
+++ b/templates/index.html
@@ -30,6 +30,25 @@
 
 
 </head>
+<style>
+
+    		  .circle {
+        float: left;
+        margin-bottom: 10px;
+        margin-right: 10px;
+        display: inline-block;
+        width: 35px;
+        height: 35px;
+        border-radius: 50%;
+        border: 2px dotted #2c6ed5;
+        background-color: transparent;
+        text-align: center;
+        font-family: "sans";
+        font-size: 1.5em;
+        color: #555;
+        fill: none;
+  }
+</style>
 
 <body>
     <div class="page-wrapper bg-gra-03 p-t-45 p-b-50">
@@ -45,13 +64,14 @@ var dynamicInput = [];
 function addInput(){
     var newdiv = document.createElement('div');
     newdiv.id = dynamicInput[counter];
-    newdiv.innerHTML = "Template " + (counter + 1) + " <br><input class='input--style-5 form-control' type='text' placeholder='Please enter the template text' name = template_"+counter +" required> <br><input class='btn btn--radius-2 btn--red' type='button' value='-' onClick='removeInput("+dynamicInput[counter]+");'>";
+    newdiv.innerHTML = "Template " + (counter + 1) + " <br><input class='input--style-5 form-control' type='text' placeholder='Next template text' name = template_"+counter +" required> <br><input class='btn btn--radius-2 btn--blue' style='padding: 0 25px;' type='button' value='-' onClick='removeInput("+dynamicInput[counter]+");'>";
     document.getElementById('formulario').appendChild(newdiv);
     counter++;
 }
 
   function removeInput(id){
     var elem = document.getElementById(id);
+    counter--;
     return elem.parentNode.removeChild(elem);
   }
 </script>
@@ -65,21 +85,25 @@ var dynamicInput = [];
 function addInput_map(){
     var newdiv = document.createElement('div');
     newdiv.id = dynamicInput[counter_map];
-    newdiv.innerHTML = "Mapping " + (counter_map + 1) + " <div class='row row-space'><div class='col-2'><div class='input-group'><input class='input--style-5 form-control' type='text' placeholder='origin' name=origin_"+ counter_map +" required></div></div><div class='col-2'><div class='input-group'><input class='input--style-5 form-control' type='text' placeholder='mapping' name=mapping_"+counter_map+" required><input class='btn btn--radius-2 btn--red' type='button' value='-' onClick='removeInput("+dynamicInput[counter]+");'></div></div></div>";
+    newdiv.innerHTML = "Mapping " + (counter_map + 1) +
+    " <div class='row row-space'><div class='col-2'><div class='input-group'><input class='input--style-5 form-control' type='text' placeholder='origin' name=origin_"+ counter_map +" required></div></div><div class='col-2'><div class='input-group'><input class='input--style-5 form-control' type='text' placeholder='mapping' name=mapping_"+counter_map+" required><input class='btn btn--radius-2 btn--blue' style='padding: 0 25px' type='button' value='-' onClick='removeInput("+dynamicInput[counter]+");'></div></div></div>";
     document.getElementById('formularmap').appendChild(newdiv);
-    counter++;
+    counter_map++;
 }
 
   function removeInput(id){
     var elem = document.getElementById(id);
+    counter_map--;
     return elem.parentNode.removeChild(elem);
   }
 </script>
+
+
                 <div class="card-body">
                     <form method="POST" enctype="multipart/form-data" >
-                       <label for="file"><h4>1.</h4>Upload csv data in a zip file. The uploaded zip file contains the train and test dataset in csv format and a readme file</label><br>
-                        <input type="file" id="file-uploader" name = "file" required>
-                        <p id="feedback"></p>
+                       <label for="file"><span class="circle">1.</span> <h5>Upload csv data in a zip file. The uploaded zip file contains the train and test dataset in csv format and a readme file</h5></label>
+                        <input type="file" accept=".tar.gz" style="margin-left: 45px;" id="file-uploader" name = "file" required>
+                        <p id="feedback" style="margin-left: 45px;"></p>
                         <div class="p-t-15">
                         {% if error %}
                         <div class="alert alert-danger">{{ error }}</div>
@@ -94,8 +118,8 @@ fileUploader.addEventListener('change', (event) => {
   feedback.innerHTML = msg;
 });
 </script>
-                        <div class="form-row m-b-55">
-                            <div class="name"><h4>2.</h4>Define columns numbers:</div>
+                        <span class="circle">2.</span><div class="form-row m-b-55">
+                            <div class="name">Define column numbers:</div>
                             <div class="value">
                                 <div class="row row-space">
                                     <div class="col-2">
@@ -110,21 +134,21 @@ fileUploader.addEventListener('change', (event) => {
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div><span class="circle">3.</span>
                         <div class="form-row"id="formulario">
-                            <div class="name"><h4>3.</h4>Define templates:</div>
+                            <div class="name">Define templates:</div>
                             <div class="value">
                                 <div id="dynamicInput[0]">
                                 <div class="input-group" >
-                                    <input class="input--style-5 form-control" type="text" placeholder = "Template text here.Example:It was_." name="template_0"  required>
-                                    <button class="btn btn--radius-2 btn--red"  type ="button" onClick="addInput();">+</button><br>
+                                    <input class="input--style-5 form-control" type="text" placeholder = "Example: It was_." name="template_0"  required>
+                                    <button class="btn btn--radius-2 btn--blue" style="padding: 0 25px;" type ="button" onClick="addInput();">+</button>
                                     </div>
                                     </div>
                                 </div>
                             </div>
 
-                        <div class="form-row m-b-55">
-                            <div class="name"><h4>4.</h4>Define verbalizer mapping (label: mapping):</div>
+                        <span class="circle">4.</span><div class="form-row m-b-55">
+                            <div class="name">Define verbalizer mappings:</div>
                             <div class="value">
                                 <div class="row row-space" id = 'formularmap' >
                                     <div class="col-2">
@@ -149,16 +173,17 @@ fileUploader.addEventListener('change', (event) => {
                                     <div class="col-2">
                                         <div class="input-group">
                                             <input class="input--style-5 form-control" type="text" placeholder="mapping 2" name="mapping_1" required>
-                                            <button class="btn btn--radius-2 btn--red"  type ="button" onClick="addInput_map();">+</button><br>
+                                            <button class="btn btn--radius-2 btn--blue" style="padding: 0 25px;" type ="button" onClick="addInput_map();">+</button>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="form-row p-t-20">
-                            <label class="label label--block"><h4>5.</h4>Define your language model:</label>
+                        </div>
+                        <div class="form-row"><span class="circle">5.</span>
+                            <label class="name">Define your language model:</label><div class="m-r-45"></div>
                             <div class="p-t-15">
-                                <label class="radio-container m-r-55">gbert-base
+                                <label class="radio-container m-r-55"><span></span>gbert-base
                                     <input type="radio" checked="checked" name="model_para" value="gbert-base" required>
                                     <span class="checkmark"></span>
                                 </label>
@@ -168,7 +193,7 @@ fileUploader.addEventListener('change', (event) => {
                                 </label>
                             </div>
                         </div>
-                        <button class="btn btn--radius-2 btn--red" type="submit">Send</button><br><br>
+                        <button class="btn btn--radius-2 btn--blue" type="submit">Send</button><br><br>
                     </form>
                 </div>
             </div>
