--- a/templates/final_page.html
+++ b/templates/final_page.html
@@ -32,9 +32,23 @@
         <div class="wrapper wrapper--w790">
             <div class="card card-5">
                 <div class="card-heading">
-                    <h2 class="title">Predict Unlabeled Data</h2>
+                    <div class="title">Predict Unlabeled Data</div>
+                    <button class="btn logout-btn logout-btn:hover" onclick="Logout()">Logout</button>
                 </div>
                 <style>
+   .logout-btn {
+    display: flex;
+    float: right;
+    color: lightgrey;
+    line-height: 0px;
+    align-items: center;
+    padding: 0px 25px;
+    }
+
+    .logout-btn:hover {
+    color: white;
+    }
+
 #container {
 text-align: center;
 }
@@ -80,6 +94,30 @@ text-align: start;
                             </div>
 
                 <script>
+
+const feedbackDiv = document.getElementById('feedback');
+
+const observer = new MutationObserver(function(mutationsList) {
+  for (let mutation of mutationsList) {
+    if (mutation.type === 'childList' && feedbackDiv.innerText.trim() !== '') {
+      // This function will be called whenever the content of the div changes
+  changeButtonColor("mycontain", "blue");
+  removeButtonAttribute("mycontain", "disabled");
+  remove
+      // Call your function here or execute any code you want to run when feedback is given
+    }
+  }
+});
+
+observer.observe(feedbackDiv, { childList: true });
+
+
+                    function Logout() {
+        fetch('/logout').then(response => {
+            window.location.href = '/login';
+        });
+    }
+
                     document.getElementById("file").addEventListener("change", function() {
     var file = this.files[0];
     var formData = new FormData();
@@ -114,8 +152,13 @@ text-align: start;
         document.getElementById("loadingText").style.display = "none";
     }
     function changeButtonColor(buttonId, color) {
+            document.getElementById(buttonId).removeAttribute("style");
 			document.getElementById(buttonId).setAttribute("class", "btn btn--radius-2 btn--"+color);
 		}
+
+    function removeButtonAttribute(buttonId, attribute) {
+        document.getElementById(buttonId).removeAttribute(attribute);
+    }
 
     function changeButtonText(buttonId, text) {
             const button = document.getElementById(buttonId);
@@ -125,7 +168,7 @@ text-align: start;
                 </script>
 
     <div class="card-body" id="container"><span class="circle">2.</span>
-        <button class="btn btn--radius-2 btn--blue" id="mycontain" onclick="startPrediction(); disableButton(id); showText(); showLoading()">Predict labels using PET Model</button>
+        <button class="btn btn--radius-2 btn--blue" id="mycontain" onclick="startPrediction(); disableButton(id); showText(); showLoading()" style="background-color: grey;" disabled>Predict labels using PET Model</button>
         <span id="spinner" class="spinner"></span>
               <span id="loadingText">Please wait...</span>
             </div>
@@ -171,19 +214,24 @@ text-align: start;
                     hideLoading("loading");
                     hideText();
                     changeButtonColor("mycontain", "green");
+                    changeButtonColor("mycontain_download", "blue");
                     changeButtonText("mycontain", "Prediction Finished");
+                    removeButtonAttribute("mycontain_download", "disabled");
                 });
         }
     </script>
 
                                             <div class="card-body" id="container"><span class="circle">3.</span>
-                                <button class="btn btn--radius-2 btn--blue" id="mycontain_download">Download Predicted data</button>
+                                <button class="btn btn--radius-2 btn--blue" id="mycontain_download" style="background-color: grey;" disabled>Download Predicted data</button>
                             </div>
                 </div>
             </div>
         </div>
     </div>
     <script>
+
+
+
   const downloadButton = document.getElementById('mycontain_download');
   downloadButton.addEventListener('click', () => {
     const url = '/download_prediction'; // The URL of your FastAPI endpoint
