move css javascript code in new file

--- a/templates/final_page.html
+++ b/templates/final_page.html
@@ -55,9 +55,9 @@
                 <div class="card-body" id="container"><span class="circle_1">1.</span>
                                 <label class="btn btn--radius-2 btn--blue">
                                       Upload unlabeled data as a csv file
-                                <input type="file" accept=".csv" name="file" id="file" style="display:none;">
+                                <input type="file" accept=".csv" name="file_final" id="file_final" style="display:none;">
                                 </label>
-                                <div id="feedback"></div>
+                                <div id="feedback_file"></div>
                             </div>
 
 
@@ -89,7 +89,7 @@
     <script src="static/vendor/datepicker/daterangepicker.js"></script>
 
     <!-- Main JS-->
-    <script src="static/js/global.js"></script>
+    <script src="/static/js/global.js"></script>
     <script src="/static/js/script.js"></script>
 
 </body><!-- This templates was made by Colorlib (https://colorlib.com) -->
