resolve conflict and remove duplicate in javascript

--- a/templates/final_page.html
+++ b/templates/final_page.html
@@ -28,6 +28,7 @@
 
 </head>
 
+
 <body>
     <div class="page-wrapper bg-gra-03 p-t-45 p-b-50">
         <div class="wrapper wrapper--w790">
@@ -52,6 +53,7 @@
                             </div>
                         </div>
 
+
                 <div class="card-body" id="container"><span class="circle_1">1.</span>
                                 <label class="btn btn--radius-2 btn--blue">
                                       Upload unlabeled data as a csv file
@@ -61,8 +63,9 @@
                             </div>
 
 
+
     <div class="card-body" id="container"><span class="circle_1">2.</span>
-        <button class="btn btn--radius-2 btn--blue" id="mycontain" onclick="startPrediction(); disableButton(id); showText(); showLoading()" style="background-color: grey;" disabled>Predict labels using PET Model</button>
+        <button class="btn btn--radius-2 btn--blue" id="mycontain" onclick="startPrediction(); disableButton_final(id); showText_final(); showLoading_final()" style="background-color: grey;" disabled>Predict labels using PET Model</button>
         <span id="spinner" class="spinner"></span>
               <span id="loadingText">Please wait...</span>
             </div>
@@ -91,6 +94,7 @@
     <!-- Main JS-->
     <script src="/static/js/global.js"></script>
     <script src="/static/js/script.js"></script>
+
 
 </body><!-- This templates was made by Colorlib (https://colorlib.com) -->
 </html>
