--- a/templates/index.html
+++ b/templates/index.html
@@ -147,6 +147,10 @@
     <!-- Main JS-->
     <script src="/static/js/global.js"></script>
     <script src="/static/js/script.js"></script>
+    <script>
+      addEventListenersForIndex();
+    </script>
+
 
 </body><!-- This templates was made by Colorlib (https://colorlib.com) -->
 
