--- a/templates/next.html
+++ b/templates/next.html
@@ -72,6 +72,26 @@
       <text class="progress-ring__percentage" x="100%" y="-100%" dominant-baseline="middle" text-anchor="middle">0%</text>
     </svg>
   </div>
+                         <script>
+
+    let steps;
+    fetch('/steps').then(res => res.json()).then(data => parseInt(data.steps)).then(value => {steps = value});
+
+    let currentStep = 0; // set the current step here, between 0 and steps
+    const progressRing = document.querySelector('.progress-ring__circle--fill');
+    const ring_circle = document.querySelector('.progress-ring__circle');
+    const progressPercentage = document.querySelector('.progress-ring__percentage');
+    const circumference = 2 * Math.PI * 45;
+    let progress = 0;
+
+    const animateProgress = () => {
+      progress = currentStep / steps;
+      progressRing.style.strokeDashoffset = circumference * (1 - progress) - circumference;
+      progressPercentage.textContent = `${Math.floor(progress * 100)}%`;
+    };
+
+
+</script>
 
 
 
